--- a/modulo-1-leccion-01-ejercicio-sola/index.html
+++ b/modulo-1-leccion-01-ejercicio-sola/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <header>This is the header of my first web page bymyself</header>
     Hola mundo, este es mi ejercio sola
 </body>
 </html>
